Updates to 1.21.5
- Adds custom jar name support to dependency system